# RustParallelProject

./: Cargo.toml  README.md  sample.txt  timings_big.txt
src/: calc_neg.rs  eval.rs  gen_mat.rs  main.rs  util.rs
