[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rayon="1.4.1" # uncomment me and comment line above to disable logs for better performances
diam={git="https://github.com/wagnerf42/diam"}
indicatif = "0.17.9"
itertools = "0.13.0"
image = "0.25.5"
noise = "0.9.0"
plotters = "0.3.7"

